Fix toolbar messages being stuck to breadcrumbs on large screens

--- a/webapp/resources/sass/_toolbar.scss
+++ b/webapp/resources/sass/_toolbar.scss
@@ -106,8 +106,12 @@ a.toolbar-btn-message:active {
 
 
 // Messages attached to toolbar on smaller screens
+.ui.breadcrumb + .ui.toolbar-messages {
+    margin-top: 1em;
+}
+
 @media not screen, (max-width: 767px) {
-    .ui.toolbar-messages > .ui.message {
+    .ui.toolbar-messages .ui.message {
         margin-top: -1.0em;
         margin-left: -1em;
         margin-right: -1em;
